{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 130,
  "lineage": "41b66827-1309-e588-7078-438056b7ed17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143f79b762957cd2",
            "association_id": "eipassoc-0c088d7cd04730b74",
            "domain": "vpc",
            "id": "eipalloc-0143f79b762957cd2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-049edc3d3ee898fff",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-3-226-39-7.compute-1.amazonaws.com",
            "public_ip": "3.226.39.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00683faabc7ed78da",
            "association_id": "eipassoc-072cfef256f8c27f8",
            "domain": "vpc",
            "id": "eipalloc-00683faabc7ed78da",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0172c3abde276ccb8",
            "private_dns": "ip-10-0-2-249.ec2.internal",
            "private_ip": "10.0.2.249",
            "public_dns": "ec2-100-24-104-64.compute-1.amazonaws.com",
            "public_ip": "100.24.104.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:internet-gateway/igw-00a593f7a7a89f0b2",
            "id": "igw-00a593f7a7a89f0b2",
            "owner_id": "575287437375",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:575287437375:loadbalancer/app/my-lb/e96088cd890eb8b7",
            "arn_suffix": "app/my-lb/e96088cd890eb8b7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-612748640.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:575287437375:loadbalancer/app/my-lb/e96088cd890eb8b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0509cdb85aaa1bb37"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054dc77d85fcd91ae"
              },
              {
                "subnet_id": "subnet-0c1e8d518437ba110"
              }
            ],
            "subnets": [
              "subnet-054dc77d85fcd91ae",
              "subnet-0c1e8d518437ba110"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0b231d77d48afafa0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.app_lb_sg",
            "aws_subnet.priv_sub",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143f79b762957cd2",
            "connectivity_type": "public",
            "id": "nat-0d5e4a75f929c0299",
            "network_interface_id": "eni-049edc3d3ee898fff",
            "private_ip": "10.0.1.135",
            "public_ip": "3.226.39.7",
            "subnet_id": "subnet-09634da140515b929",
            "tags": {
              "Name": "my_NAT_gw 1"
            },
            "tags_all": {
              "Name": "my_NAT_gw 1"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.pub_sub",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00683faabc7ed78da",
            "connectivity_type": "public",
            "id": "nat-0c879373d9c2e57cb",
            "network_interface_id": "eni-0172c3abde276ccb8",
            "private_ip": "10.0.2.249",
            "public_ip": "100.24.104.64",
            "subnet_id": "subnet-0a3b1052905c9a5c1",
            "tags": {
              "Name": "my_NAT_gw 2"
            },
            "tags_all": {
              "Name": "my_NAT_gw 2"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.pub_sub",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a593f7a7a89f0b2",
            "id": "r-rtb-04b056b34c326c3251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b056b34c326c325",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.pub_rt",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:route-table/rtb-063a329ae2def3e9c",
            "id": "rtb-063a329ae2def3e9c",
            "owner_id": "575287437375",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "priv_route_table"
            },
            "tags_all": {
              "Name": "priv_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:route-table/rtb-04b056b34c326c325",
            "id": "rtb-04b056b34c326c325",
            "owner_id": "575287437375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a593f7a7a89f0b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table"
            },
            "tags_all": {
              "Name": "pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b1e75b559914938",
            "route_table_id": "rtb-063a329ae2def3e9c",
            "subnet_id": "subnet-0c1e8d518437ba110"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05860c4ee90b62f2a",
            "route_table_id": "rtb-063a329ae2def3e9c",
            "subnet_id": "subnet-054dc77d85fcd91ae"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02453f818f014a5c3",
            "route_table_id": "rtb-063a329ae2def3e9c",
            "subnet_id": "subnet-05a2339997f80e0ff"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09568560f056b5999",
            "route_table_id": "rtb-063a329ae2def3e9c",
            "subnet_id": "subnet-0e5c89cdccf1fb771"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae7677a04e34363a",
            "route_table_id": "rtb-04b056b34c326c325",
            "subnet_id": "subnet-09634da140515b929"
          },
          "dependencies": [
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0bd520145ecd5f9",
            "route_table_id": "rtb-04b056b34c326c325",
            "subnet_id": "subnet-0a3b1052905c9a5c1"
          },
          "dependencies": [
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:security-group/sg-0509cdb85aaa1bb37",
            "description": "Allows inbound http traffic from the internet/everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0509cdb85aaa1bb37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-lb-sg",
            "name_prefix": "",
            "owner_id": "575287437375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-lb-sg"
            },
            "tags_all": {
              "Name": "app-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:security-group/sg-04da4ab23d9704d77",
            "description": "Allows http from inbound load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04da4ab23d9704d77",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0509cdb85aaa1bb37"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-tier-sg",
            "name_prefix": "",
            "owner_id": "575287437375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-tier-sg"
            },
            "tags_all": {
              "Name": "app-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_lb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:security-group/sg-0d6e1acae1ceda974",
            "description": "Allows mysql inbound traffic from app-tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6e1acae1ceda974",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04da4ab23d9704d77"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-tier-sg",
            "name_prefix": "",
            "owner_id": "575287437375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-tier-sg"
            },
            "tags_all": {
              "Name": "db-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_lb_sg",
            "aws_security_group.app_tier_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:security-group/sg-0a236d592534c7ccc",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a236d592534c7ccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "575287437375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier-sg"
            },
            "tags_all": {
              "Name": "web-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-0c1e8d518437ba110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1e8d518437ba110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub 1"
            },
            "tags_all": {
              "Name": "priv_sub 1"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-054dc77d85fcd91ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054dc77d85fcd91ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub 2"
            },
            "tags_all": {
              "Name": "priv_sub 2"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-05a2339997f80e0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a2339997f80e0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub 3"
            },
            "tags_all": {
              "Name": "priv_sub 3"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-0e5c89cdccf1fb771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5c89cdccf1fb771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub 4"
            },
            "tags_all": {
              "Name": "priv_sub 4"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-09634da140515b929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09634da140515b929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub 1"
            },
            "tags_all": {
              "Name": "pub_sub 1"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:subnet/subnet-0a3b1052905c9a5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b1052905c9a5c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575287437375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub 2"
            },
            "tags_all": {
              "Name": "pub_sub 2"
            },
            "vpc_id": "vpc-0b231d77d48afafa0"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575287437375:vpc/vpc-0b231d77d48afafa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf7fd98d2c083daf",
            "default_route_table_id": "rtb-03e2a3ad23507847f",
            "default_security_group_id": "sg-0294beef25b540303",
            "dhcp_options_id": "dopt-0dc4aad3543a64069",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b231d77d48afafa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e2a3ad23507847f",
            "owner_id": "575287437375",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}